Add a alt text to the image

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     </head>
     <body>
         <div class="card">
-            <img id="animate" class="avatar" src="https://artistjameshooper.com/img/james-selfportrait3.jpg">
+            <img id="animate" class="avatar" src="https://artistjameshooper.com/img/james-selfportrait3.jpg" alt="James Hooper Profile">
             <div class="description">
                 <h3>JAMES HOOPER</h3>
                 <p>FRONTEND DEVELOPER</p>
